[Media Controls] Fix progress not meeting scrubber when change size

Force the timeline element render itself when size change.

Bug: 921543
Change-Id: I1e35275170457855362b3529085adaf3a956f6a4
Reviewed-on: https://chromium-review.googlesource.com/c/1409729
Commit-Queue: Jazz Xu <jazzhsu@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623428}
Former-commit-id: a490cf0b183ac614a056c044d8eafc105b786b38